# sentient_core

./: .gitignore  Cargo.toml  README.md  build_release_package.sh  config.yaml
characters/: Vox-memories.json  Vox.yaml
src/: application.rs  character_select.rs  chat.rs  chatlog.rs  config.rs  llm_engine.rs  log_select.rs  main.rs  main_menu.rs  memories.rs  tui.rs  vector_embedding_engine.rs
